# edgetpu_ros

./: .gitignore  CMakeLists.txt  package.xml  readme.md
launch/: classify.launch  detect.launch
scripts/: classify  classify.py  detect  detect.py
